# LA

./: AGENTS.md  CMakeLists.txt  la.hpp
docs/plans/: 000_use-std-assert.md  001_api-design.md  002_missing-features.md  003_modern-cpp.md
include/: assertfunc.h  assertfunc.hpp  la.hpp  la_extended.h  la_extended.hpp
include/la/: la.hpp  la_extended.h
src/: assertfunc.cpp  la.cpp  la_extended.cpp
